--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hospital</title>
   </head>
-  <body>
+  <body style="height: 100%; overflow: hidden;" >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_API_KEY%&libraries=services,clusterer,drawing"></script>
