--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/main.png" />
     <link rel="stylesheet" href="./public/reset.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_API_KEY%&libraries=services,clusterer,drawing"></script>
     <title>Hospital</title>
   </head>
-  <body style="height: 100%; overflow: hidden;" >
+  <body style="height: 100%; overflow: hidden">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_API_KEY%&libraries=services,clusterer,drawing"></script>
   </body>
 </html>
